# pulp_ansible

./: .bumpversion.cfg  .flake8  .gitignore  .pep8speaks.yml  .travis.yml  CHANGES.md  CHANGES.rst  CODEOWNERS  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  dev_requirements.txt  doc_requirements.txt  flake8.cfg  functest_requirements.txt  lint_requirements.txt  pyproject.toml  releasing.md  rename.py  requirements.txt  setup.py  template_config.yml  test_requirements.txt  unittest_requirements.txt
.ci/ansible/: smash-config.json
.ci/assets/: ci_constraints.txt
.ci/scripts/: calc_constraints.py  calc_deps_lowerbounds.py  changelog.py  check_gettext.sh  check_pulpcore_imports.sh  check_release.py  check_requirements.py  cherrypick.py  cherrypick.sh  collect_changes.py  docs-builder.py  publish_client_gem.sh  publish_client_pypi.sh  publish_docs.sh  publish_plugin_pypi.sh  redmine.py  release.py  schema.py  tweet.py  update_ci_branches.py  update_github.py  update_redmine.sh  validate_commit_message.py
.github/: dependabot.yml  stale.yml  tdd.py  template_gitref
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  changelog.yml  ci.yml  ci_tdd.yml  codeql-analysis.yml  create-branch.yml  docs.yml  fips.yml  kanban.yml  lint.yml  nightly.yml  pr_checks.yml  publish.yml  release.yml  sanity.yml  test.yml  update-labels.yml  update_ci.yml
.github/workflows/scripts/: before_install.sh  before_script.sh  build_python_client.sh  build_ruby_client.sh  check_commit.sh  create_tag_and_build_package.py  docs-publisher.py  func_test_script.sh  get_or_create_python_client.py  install.sh  install_python_client.sh  install_ruby_client.sh  post_before_install.sh  post_before_script.sh  post_docs_test.sh  pre_before_install.sh  publish_client_gem.sh  publish_client_pypi.sh  publish_docs.sh  publish_plugin_pypi.sh  push_branch_and_tag_to_github.sh  push_tag_to_github.sh  pypi_tools.py  release.py  script.sh  stage-changelog-for-default-branch.py  stage-changelog-for-master.py  update_backport_labels.py  update_ci.sh  utils.sh
.travis/: Containerfile.j2  ansible_playbook.yml  before_install.sh  before_script.sh  check_commit.sh  check_pulpcore_imports.sh  docs-builder.py  install.sh  performance_test_script.sh  playbook.yml  post_before_install.sh  post_before_script.sh  publish_client_gem.sh  publish_client_pypi.sh  publish_plugin_pypi.sh  pulp-infra.enc  redmine.py  release.py  script.sh  validate_commit_message.py
.travis/assets/: nginx.conf
CHANGES/: +collection_delete_memory.bugfix  +collection_invalid_name.bugfix  +collection_sync_latest.removal  +collection_sync_memory.bugfix  +collection_version_index.feature  +cv_list_oom.bugfix  +deprecation_api.bugfix  +django5.bugfix  +drf_bindings_interference.bugfix  +failsafe_avatar.bugfix  +fix_exception_init.bugfix  +git-sync-bad-serialize.bugfix  +git_sync_clone.bugfix  +import-logs.bugfix  +is_highest.removal  +log_namespace.bugfix  +migration_0062_OOM.bugfix  +namespace_progress_report.feature  +openapi.bugfix  +pulpcore-3.40.feature  +pulpcore.removal  +resource-budget.feature  +role_description.doc.md  +search_list_serializer.bugfix  +sha256_uniqueness.feature  +sync_pagination.bugfix  +sync_pipeline.bugfix  +sync_result.feature  +tags_migration.feature  +tags_migration.removal  1035.misc  1052.feature  1052.removal  1065.bugfix  1086.bugfix  1086.removal  1105.feature  1106.feature  1140.bugfix  1175.bugfix  (+326 more)
docs/: Makefile  bindings.rst  changes.rst  conf.py  index.rst  installation.rst  make.bat  settings.rst  testing.rst
docs/_scripts/: base.sh  distribution_repo.sh  distribution_repo_version.sh  quickstart.sh  remote-collection-token.sh  remote-collection.sh  remote.sh  repo.sh  setup.sh  sync-collection.sh  sync.sh
docs/_static/: api.json
docs/_templates/: restapi.html
docs/admin/reference/: settings.md
docs/dev/reference/: testing.md
docs/restapi/: index.rst
docs/user/guides/: signature.md
docs/workflows/: add-remove.rst  ansible-galaxy-client.rst  collection-install.rst  collections.rst  copy.rst  distribution.rst  index.rst  mazer-client.rst  roles.rst  signature.rst  sync-collection.rst  sync.rst  upload-collection.rst  upload-role.rst
pulp_ansible/: __init__.py  exceptions.py  pytest_plugin.py
pulp_ansible/app/: __init__.py  admin.py  constants.py  custom_fields.py  downloaders.py  fields.py  global_access_conditions.py  logutils.py  modelresource.py  models.py  serializers.py  settings.py  urls.py  utils.py  viewsets.py
pulp_ansible/app/galaxy/: mixins.py  serializers.py  tasks.py  views.py
pulp_ansible/app/migrations/: 0001_initial.py  0001_initial_squashed_0040_ansiblerepository_keyring.py  0001_squashed_0054_split_collection_version_numbers.py  0002_advanced_collections.py  0003_add_tags_and_collectionversion_fields.py  0004_add_fulltext_search_indexes.py  0004_alter_collection_version_name.py  0005_collectionversion_is_highest.py  0006_remove_whitelist_and_alter_collection_version_name.py  0007_collectionversion_is_certified.py  0008_collectionremote_requirements_file.py  0009_collectionimport.py  0010_ansible_related_names.py  0011_collectionimport.py  0012_auto_20190906_2253.py  0013_pulp_fields.py  0014_certification_enum.py  0015_ansiblerepository.py  0016_add_extension.py  0017_increase_length_collectionversion_fields.py  0018_fix_collection_relative_path.py  0019_collection_token.py  0020_auto_20200810_1926.py  0021_rename_role_remote.py  0022_URLField_to_CharField.py  0023_alter_requirements_file_field.py  0024_ansiblerepository_extra_data.py  0024_remove_collectionversion_certification.py  0025_collectionversion_version_index.py  0025_deprecation.py  0025_increase_collection_version_version_size.py  0026_deprecation_per_repository.py  0027_auto_20201120_1435.py  0028_collectionremote_rate_limit.py  0028_collectionversion_namespace_length.py  (+64 more)
pulp_ansible/app/tasks/: copy.py  (+15 more)
pulp_ansible/tests/: constants.py
pulp_plugin_template/: __init__.py
pulp_plugin_template/app/: __init__.py  models.py  serializers.py  viewsets.py
staging_docs/user/: index.md
(+118 files in other folders)
